tests/test_enum/bad/not_ending_wildcard.catala_en
## Wildcard must be the last case

```catala
declaration enumeration E:
  -- Case1
  -- Case2
```

### Wildcard can't be the first case

```catala
declaration scope First_case:
  context x content E
  context y content integer

scope First_case:
  definition x equals Case1
  definition y equals match x with pattern
    -- anything : 31
    -- Case2 : 42
	-- Case1 : 42
```

### Wildcard can't be the a middle case

```catala
declaration scope Middle_case:
  context x content E
  context y content integer

scope Middle_case:
  definition x equals Case1
  definition y equals match x with pattern
    -- Case2 : 42
    -- anything : 31
	-- Case1 : 42
```

```catala-test-inline
$ catala Interpret -s First_case
[ERROR]
Wildcard must be the last match case

Not ending wildcard:
┌─⯈ tests/test_enum/bad/not_ending_wildcard.catala_en:19.5-19.21:
└──┐
19 │     -- anything : 31
   │     ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
   └┬ Wildcard must be the last case
    └─ Wildcard can't be the first case

Next reachable case:
┌─⯈ tests/test_enum/bad/not_ending_wildcard.catala_en:20.5-20.18:
└──┐
20 │     -- Case2 : 42
   │     ‾‾‾‾‾‾‾‾‾‾‾‾‾
   └┬ Wildcard must be the last case
    └─ Wildcard can't be the first case
#return code 123#
```

```catala-test-inline
$ catala Interpret -s Middle_case
[ERROR]
Wildcard must be the last match case

Not ending wildcard:
┌─⯈ tests/test_enum/bad/not_ending_wildcard.catala_en:19.5-19.21:
└──┐
19 │     -- anything : 31
   │     ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
   └┬ Wildcard must be the last case
    └─ Wildcard can't be the first case

Next reachable case:
┌─⯈ tests/test_enum/bad/not_ending_wildcard.catala_en:20.5-20.18:
└──┐
20 │     -- Case2 : 42
   │     ‾‾‾‾‾‾‾‾‾‾‾‾‾
   └┬ Wildcard must be the last case
    └─ Wildcard can't be the first case
#return code 123#
```
